--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vue-pdf-viewer/viewer": "^1.1.0",
     "nuxt": "^3.11.2",
+    "pdf-vue3": "^1.0.12",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
