--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^3.11.2",
     "pdf-vue3": "^1.0.12",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
