--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.5.1",
+    "@pinia/nuxt": "^0.5.3",
     "@vue-pdf-viewer/viewer": "^1.1.0",
     "nuxt": "^3.11.2",
     "pdf-vue3": "^1.0.12",
+    "pinia": "^2.2.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-toastification": "^2.0.0-rc.5"
