--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.3",
     "@vue-pdf-viewer/viewer": "^1.1.0",
+    "click-outside-vue3": "^4.0.1",
     "nuxt": "^3.11.2",
     "pdf-vue3": "^1.0.12",
     "pinia": "^2.2.2",
