--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@google-translate-select/vue3": "^0.1.8",
     "@pinia/nuxt": "^0.5.3",
     "@vue-pdf-viewer/viewer": "^1.1.0",
     "click-outside-vue3": "^4.0.1",
